@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.62
+Release: 0.63
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -470,7 +470,11 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
-* Mon Jan 27 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.67
+* Tue Jan 28 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.63
+- fix: clean relocation path for --prefix=/.
+- python: permit stdout/stderr to be remapped to install.log.
+
+* Mon Jan 27 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.62
 - fix: more debugedit.c problems.
 
 * Sat Jan 25 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.61
